Feature: Docker apply

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,22 +5,29 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_DB: encurtador
-      POSTGRES_USER: username
-      POSTGRES_PASSWORD: password
+      POSTGRES_DB: ${DATABASE_NAME}
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    restart: always
 
-  # app:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - "3000:3000"
-  #   depends_on:
-  #     - postgres
-  #   environment:
-  #     DATABASE_URL: postgres://username:password@postgres:5432/encurtador
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - 3000:${PORT}
+    depends_on:
+      - postgres
+    restart: always
+    environment:
+      DATABASE_URL: postgres://${DATABASE_USER}:${DATABASE_PASSWORD}@postgres:5432/${DATABASE_NAME}
+    volumes:
+      - .:/app
+    command: npm run start:dev
+
+      
 
 volumes:
   postgres-data:
